[package]
name = "graphql_hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
url = "2"
graphql-parser = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"