[package]
name = "helios_recon"
version = "2.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "cookies"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
url = "2.5"
graphql-parser = "0.4"
sourcemap = "8.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }
anyhow = "1.0"
